unified canvas element, add id

--- a/src/components/Drones/SimpleArm.astro
+++ b/src/components/Drones/SimpleArm.astro
@@ -2,8 +2,7 @@
 import Canvas from "../Figures/Canvas.astro"
 ---
 
-<Canvas>
-    <canvas id="viewport" class="flex justify-center w-96"></canvas>
+<Canvas id="viewport">
 </Canvas>
 
 <script>
