--- a/src/components/Cameras/LightRays.astro
+++ b/src/components/Cameras/LightRays.astro
@@ -2,8 +2,7 @@
 import Canvas from "../Figures/Canvas.astro";
 ---
 
-<Canvas>
-    <canvas id="light-rays" class="flex justify-center w-96"></canvas>
+<Canvas id="light-rays">
 </Canvas>
 
 <script>
