remove justify text in definition

--- a/src/components/Globals/Definition.astro
+++ b/src/components/Globals/Definition.astro
@@ -16,7 +16,7 @@ if (Astro.slots.has("default")) {
     <div class="mb-4">
       <p class="text-lg">Definition: <dfn>{term}</dfn></p>
     </div>
-    <div class="text-justify text-gray-300">
+    <div class="text-gray-300">
         <p set:html={html}></p>
   </div>
 </aside>
