remove hard-coded color

--- a/src/components/Globals/Important.astro
+++ b/src/components/Globals/Important.astro
@@ -10,7 +10,7 @@ if (Astro.slots.has("default")) {
 
 <div class="mt-6 border-l-8 border-l-red-900 pl-4 py-2">
     <p class="font-bold">Important:</p>
-    <div class="bg-primary-dark italic text-gray-900 dark:text-white" set:html={html}>
+    <div class="bg-primary-dark italic" set:html={html}>
     </div>
 </div>
 
