--- a/src/components/TF/LocalFrameROS.astro
+++ b/src/components/TF/LocalFrameROS.astro
@@ -22,6 +22,7 @@ import Canvas from "../Figures/Canvas.astro";
     setup: ({ scene, camera }) => {
 
       const LocalFrame = new THREE.Group();
+      camera.position.set(2, 2, 2);
       camera.lookAt(LocalFrame.position);
 
       const material = new THREE.MeshStandardMaterial({ color: 0x7dd3fc, metalness: 0.1, roughness: 0.6, opacity: 0.7 })
