add style to avoid copying the external link arrow

--- a/src/components/Globals/A.astro
+++ b/src/components/Globals/A.astro
@@ -42,7 +42,7 @@ span.icon-link::before {
 }
 
 .external-link {
-  @apply align-super whitespace-nowrap text-xs;
+  @apply align-super whitespace-nowrap text-xs select-none;
 }
 
 </style>
